--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Ruihong Wang</h1>
-				<p>First year student at Purdue University</p>
+				<p>First year PhD student at Purdue University.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:wang4996@purdue.edu">email</a></li>
-        		<li><a href="https://github.com/ruihong000">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/ruihong000">github.com/ruihong000</a></li>
 			</ul>
 		</footer>
 	</body>
